--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,145 +1,426 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
-
+/*===== GOOGLE FONTS =====*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+/*===== VARIABLES CSS =====*/
 :root{
-    --header-height: 3rem;
-    --font-semi: 600;
+  --header-height: 3rem;
+  --font-semi: 600;
 }
 
-/*cores*/
-
+/*===== Cores =====*/
 :root{
-    --first-color: #4070f4;
-    --second-color: #0e2431;
-}
-/*Fontes*/
-:root{
-    --body-font: 'Noto Sans JP', sans-serif, Arial;
-    --big-font-size: 2rem;
-    --h2-font-size: 1.25rem;
-    --normal-font-size: 0.938rem;
+  --first-color: #4070F4;
+  --second-color: #0E2431;
 }
 
+/*===== Fonte =====*/
+:root{
+  --body-font: 'Poppins', sans-serif;
+  --big-font-size: 2rem;
+  --h2-font-size: 1.25rem;
+  --normal-font-size: 0.938rem;
+}
 @media screen and (min-width: 768px){
-    :root{
-        --big-font-size: 3.5rem;
-        --h2-font-size: 2rem;
-        --normal-font-size: 1rem;
+  :root{
+    --big-font-size: 3.5rem;
+    --h2-font-size: 2rem;
+    --normal-font-size: 1rem;
+  }
 }
 
+/*===== Margens =====*/
 :root{
-    --mb-1: 0.5rem;
-    --mb-2: 1rem;
-    --mb-3: 1.5rem;
-    --mb-4: 2rem;
-    --mb-5: 2.5rem;
-    --mb-6: 3rem;
+  --mb-1: 0.5rem;
+  --mb-2: 1rem;
+  --mb-3: 1.5rem;
+  --mb-4: 2rem;
+  --mb-5: 2.5rem;
+  --mb-6: 3rem;
 }
 
-/* z-index */
-
+/*===== z index =====*/
 :root{
-    --z-back: -10;
-    --z-normal: 1;
-    --z-tooltip: -10;
-    --z-fixed: 100;
+  --z-back: -10;
+  --z-normal: 1;
+  --z-tooltip: 10;
+  --z-fixed: 100;
 }
 
-/* base */
-
+/*===== BASE =====*/
 *,::before,::after{
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 html{
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 body{
-    margin: var(--header-height) 0 0 0;
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    color: var(--second-color);
+  margin: var(--header-height) 0 0 0;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  color: var(--second-color);
 }
 h1,h2,p{
-    margin: 0;
+  margin: 0;
 }
 ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 a{
-    text-decoration: none;
+  text-decoration: none;
 }
 img{
-    max-width: 100%;
-    height: auto;
-    display: block
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
-/* class css */
-.section-title{
-    position: relative;
-    font-size: var(--h2-font-size);
-    color: var(--first-color);
-    margin-top: var(--mb-2);
-    margin-bottom: var(--mb-4);
-    text-align: center;
+/*===== CLASS CSS ===== */
+.section-menu{
+  position: relative;
+  font-size: var(--h2-font-size);
+  color: var(--first-color);
+  margin-top: var(--mb-2);
+  margin-bottom: var(--mb-4);
+  text-align: center;
 }
-.section-title::after{
-    position: absolute;
-    content: "";
-    width: 64px;
-    height: 0.18rem;
-    left: 0;
-    right: 0;
-    margin: auto;
-    top: 2rem;
-    background-color: var(--first-color);
+.section-menu::after{
+  position: absolute;
+  content: "";
+  width: 64px;
+  height: 0.18rem;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 2rem;
+  background-color: var(--first-color);
 }
 .section{
-    padding-top: 3rem;
-    padding-bottom: 2rem;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
 }
 
-/* layout */
+/*===== LAYOUT =====*/
 .bd-grid{
-    max-width: 1024px;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-column-gap: 2rem;
-    width: calc(100% - 2rem);
-    margin-left: var(--mb-2);
-    margin-right: var(--mb-2);
+  max-width: 1024px;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 2rem;
+  width: calc(100% - 2rem);
+  margin-left: var(--mb-2);
+  margin-right: var(--mb-2);
 }
 .l-header{
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: var(--z-fixed);
-    background-color: #fff;
-    box-shadow: 0 1px 4px rgba(146,161,176,.15);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  background-color: #fff;
+  box-shadow: 0 1px 4px rgba(146,161,176,.15);
 }
 
-/* nav */
+/*===== NAV =====*/
 .nav{
-    height: var(--header-height);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: var(--font-semi);
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: var(--font-semi);
 }
 @media screen and (max-width: 768px){
-    .nav_menu{
-        position: fixed;
-        top: var(--header-height);
-        right: 0;
-        width: 80%;
-        height: 100%;
-        padding: 2rem;
-        background-color: var(--second-color);
-        transition: .5s;
-    }
+  .nav__menu{
+    position: fixed;
+    top: var(--header-height);
+    right: -100%;
+    width: 80%;
+    height: 100%;
+    padding: 2rem;
+    background-color: var(--second-color);
+    transition: .5s;
+  }
 }
-.nav_item{
-    
+.nav__item{
+  margin-bottom: var(--mb-4);
+}
+.nav__link{
+  position: relative;
+  color: #fff;
+}
+.nav__link:hover{
+  position: relative;
+}
+.nav__link:hover::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0.18rem;
+  left: 0;
+  top: 2rem;
+  background-color: var(--first-color);
+}
+.nav__logo{
+  color: var(--second-color);
+}
+.nav__toggle{
+  color: var(--second-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+/*Active menu*/
+.active::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0.18rem;
+  left: 0;
+  top: 2rem;
+  background-color: var(--first-color);
+}
+
+/*=== Show menu ===*/
+.show{
+  right: 0;
+}
+
+/*===== HOME =====*/
+.inicio{
+  height: calc(100vh - 3rem);
+  row-gap: 1rem;
+}
+.inicio__data{
+  align-self: center;
+}
+.inicio__title{
+  font-size: var(--big-font-size);
+  margin-bottom: var(--mb-5);
+}
+.inicio__title-color{
+  color: var(--first-color);
+}
+.inicio__social{
+  display: flex;
+  flex-direction: column;
+}
+.inicio__social-icon{
+  width: max-content;
+  margin-bottom: var(--mb-2);
+  font-size: 1.5rem;
+  color: var(--second-color);
+}
+.inicio__social-icon:hover{
+  color: var(--first-color);
+}
+.inicio__img{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 240px;
+  border-radius: 10rem;
+}
+
+/*BUTTONS*/
+.button{
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: .75rem 2.5rem;
+  font-weight: var(--font-semi);
+  border-radius: .5rem;
+}
+.button:hover{
+  box-shadow: 0 10px 36px rgba(0,0,0,.15);
+}
+
+/* ===== sobre mim =====*/
+.sobremim__container{
+  row-gap: 2rem;
+  text-align: center;
+}
+.sobremim__subtitle{
+  margin-bottom: var(--mb-2);
+}
+.sobremim__img{
+  justify-self: center;
+}
+.sobremim__img img{
+  width: 200px;
+  border-radius: .6rem;
+}
+
+/* ===== habilidades =====*/
+.habilidades__container{
+  row-gap: 2rem;
+  text-align: center;
+}
+.habilidades__subtitle{
+  margin-bottom: var(--mb-2);
+}
+.habilidades__text{
+  margin-bottom: var(--mb-4);
+}
+.habilidades__data{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  font-weight: var(--font-semi);
+  padding: .5rem 1rem;
+  margin-bottom: var(--mb-4);
+  border-radius: .5rem;
+  box-shadow: 0 4px 25px rgba(14,36,49,.15);
+}
+.habilidades__icon{
+  font-size: 2rem;
+  margin-right: var(--mb-2);
+  color: var(--first-color);
+}
+.habilidades__names{
+  display: flex;
+  align-items: center;
+}
+.habilidades__bar{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: var(--first-color);
+  height: .25rem;
+  border-radius: .5rem;
+  z-index: var(--z-back);
+}
+.habilidades__html{
+  width: 60%;
+}
+.habilidades__css{
+  width: 30%;
+}
+.habilidades__js{
+  width: 10%;
+}
+.habilidades__img{
+  border-radius: .5rem;
+}
+
+/* ===== contato =====*/
+.contato__input{
+  width: 100%;
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-semi);
+  padding: 1rem;
+  border-radius: .5rem;
+  border: 1.5px solid var(--second-color);
+  outline: none;
+  margin-bottom: var(--mb-4);
+}
+.contato__button{
+  display: block;
+  border: none;
+  outline: none;
+  font-size: var(--normal-font-size);
+  cursor: pointer;
+  margin-left: auto;
+}
+
+/* ===== FOOTER =====*/
+.footer{
+  background-color: var(--second-color);
+  color: #fff;
+  text-align: center;
+  font-weight: var(--font-semi);
+  padding: 2rem 0;
+}
+.footer__title{
+  font-size: 2rem;
+  margin-bottom: var(--mb-4);
+}
+.footer__social{
+  margin-bottom: var(--mb-4);
+}
+.footer__icon{
+  font-size: 1.5rem;
+  color: #fff;
+  margin: 0 var(--mb-2)
+}
+
+/* ===== MEDIA QUERIES=====*/
+@media screen and (min-width: 768px){
+  body{
+    margin: 0;
+  }
+  .section{
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+  }
+  .section-title{
+    margin-bottom: var(--mb-6);
+  }
+  .section-title::after{
+    width: 80px;
+    top: 3rem;
+  }
+
+  .nav{
+    height: calc(var(--header-height) + 1rem);
+  }
+  .nav__list{
+    display: flex;
+    padding-top: 0;
+  }
+  .nav__item{
+    margin-left: var(--mb-6);
+    margin-bottom: 0;
+  }
+  .nav__toggle{
+    display: none;
+  }
+  .nav__link{
+    color: var(--second-color);
+  }
+
+  .inicio{
+    height: 100vh;
+  }
+  .inicio__data{
+    align-self: flex-end;
+  }
+  .inicio__social{
+    padding-top: 0;
+    padding-bottom: 2.5rem;
+    flex-direction: row;
+    align-self: flex-end;
+  }
+  .inicio__social-icon{
+    margin-bottom: 0;
+    margin-right: var(--mb-4);
+  }
+  .inicio__img{
+    width: 457px;
+    bottom: 15%;
+  }
+
+  .sobremim__container, .habilidades__container{
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    text-align: initial;
+  }
+  .sobremim__img img{
+    width: 300px;
+  }
+  .contato__form{
+    width: 360px;
+  }
+  .contato__container{
+    justify-items: center;
+  }
+}
+
+@media screen and (min-width: 1024px){
+  .bd-grid{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .inicio__img{
+    right: 10%;
+  }
 }
