--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,19 +1,19 @@
 /*===== GOOGLE FONTS =====*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-/*===== VARIABLES CSS =====*/
+/*===== CSS =====*/
 :root{
     --header-height: 3rem;
     --font-semi: 600;
 }
 
-/*===== Colores =====*/
+/*===== Cores =====*/
 :root{
     --first-color: #4070F4;
     --second-color: #0E2431;
 }
 
-/*===== Fuente y tipografia =====*/
+/*===== Fontes =====*/
 :root{
     --body-font: 'Poppins', sans-serif;
 
@@ -28,7 +28,7 @@
     }
 }
 
-/*===== Margenes =====*/
+/*===== Margens =====*/
 :root{
     --mb-1: 0.5rem;
     --mb-2: 1rem;
@@ -315,6 +315,26 @@ img{
         width: 60%;
     }
 
+}
+
+/* ===== projetos =====*/
+.projetos{
+    &__container{
+        row-gap: 2rem;
+    }
+    &__img{ 
+        border-radius: .5rem;
+        overflow: hidden;
+        
+        & img{
+            transition: 1s;
+            cursor: pointer;
+
+            &:hover{
+                transform: scale(1.1);
+            }
+        }
+    }
 }
 
 /*CONTATO*/
